<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ejemplo.proyecto.formulario.christopher.fomulario.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"
            android:id="@+id/txtNombre"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/inpNombre"
            android:id="@+id/inputNombre"
            android:layout_below="@+id/txtNombre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apellido1"
            android:id="@+id/txtApellido1"
            android:layout_below="@+id/inputNombre"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/inpApellido1"
            android:id="@+id/inputApellido1"
            android:layout_below="@+id/txtApellido1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:id="@+id/txtCorreo"
            android:layout_below="@id/inputApellido1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/inpCorreo"
            android:hint="@string/correo"
            android:layout_below="@id/txtCorreo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edad"
            android:id="@+id/inpEdad"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inpEdad"
            android:id="@+id/inpFecha"
            android:layout_below="@id/inpEdad"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:id="@+id/sexo"
            android:layout_below="@id/inpFecha"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio"
            android:layout_below="@id/sexo">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:id="@+id/hombre"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:id="@+id/mujer"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:id="@+id/hobbies"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/inpHobbies"
            android:layout_below="@+id/scroll"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/inpHobbies" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ejecutar"
            android:id="@+id/ejecutar"/>


    </LinearLayout>

    </ScrollView>



</RelativeLayout>
